Fixed gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -418,6 +418,7 @@ img {
 }
 .join-list {
   display: flex;
+  gap: 10px;
   padding-left: 0;
   padding-right: 0;
   margin: 0;
